--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "install": "^0.13.0",
+    "node-sass": "^4.14.1",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
     "react": "^17.0.2",
