--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dinnerplanner",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@auth0/auth0-react": "^1.5.0",
     "@material-ui/core": "^4.11.4",
