--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "dinnerplanner",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8080",
   "dependencies": {
     "@auth0/auth0-react": "^1.5.0",
     "@material-ui/core": "^4.11.4",
@@ -14,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.0",
     "install": "^0.13.0",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.7",
@@ -24,11 +24,13 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "NODE_ENV=production node server/server.js",
+    "client": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "server": "nodemon server/server.js",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
