--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "http-proxy-middleware": "^2.0.0",
     "install": "^0.13.0",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.7",
@@ -24,13 +23,11 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "NODE_ENV=production node server/server.js",
-    "client": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "server": "nodemon server/server.js",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
